--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,6 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="button1">button1</string>
-    <string name="app_locationManager">LocationManager</string>
+    <string name="app_locationManagement">LocationManagement</string>
 
 </resources>
